Bug 157145 - PDF/UA Paragraph border generates "Path object not tagged" error in PAC tool
Summary: PDF/UA Paragraph border generates "Path object not tagged" error in PAC tool
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Printing and PDF export (show other bugs)
Version:
(earliest affected)
7.5.0.3 release
Hardware: All All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:24.2.0 target:7.6.3
Keywords: accessibility
: 157895 (view as bug list)
Depends on:
Blocks: PDF-Accessibility
  Show dependency treegraph
 
Reported: 2023-09-07 21:07 UTC by Gabor Kelemen (Collabora)
Modified: 2023-11-02 07:57 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file with paragraph borders (26.99 KB, application/vnd.oasis.opendocument.text)
2023-09-07 21:07 UTC, Gabor Kelemen (Collabora)
Details
The example file saved to PDF (28.31 KB, application/pdf)
2023-09-07 21:08 UTC, Gabor Kelemen (Collabora)
Details
Screenshot of the PAC error message (122.53 KB, image/png)
2023-09-07 21:08 UTC, Gabor Kelemen (Collabora)
Details
file for borders and pdf accessebility (1.02 MB, application/vnd.oasis.opendocument.text)
2023-09-08 05:21 UTC, SusanneMohn
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2023-09-07 21:07:50 UTC
Created attachment 189421 [details]
Example file with paragraph borders

Attached example file contains some paragraphs with border set.

When exported to PDF with PDF/UA set, the PAC tool reports "Path object not tagged error" about the border lines.

1. Open attached document
2. Save as PDF, with setting the PDF/UA option
3. Open the PDF document in the PAC tool
-> several issues are reported related to the border lines.

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 2ae9eb8be8d7eb9c3a72953a295d128b45639ea3
CPU threads: 15; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: en-US (hu_HU); UI: en-US
Calc: threaded
Comment 1 Gabor Kelemen (Collabora) 2023-09-07 21:08:14 UTC
Created attachment 189422 [details]
The example file saved to PDF
Comment 2 Gabor Kelemen (Collabora) 2023-09-07 21:08:51 UTC
Created attachment 189423 [details]
Screenshot of the PAC error message
Comment 3 SusanneMohn 2023-09-08 05:21:06 UTC
Bug verified- messages see attachment . look at different kind of borders. 
thank you for resolving this problem.
Comment 4 SusanneMohn 2023-09-08 05:21:53 UTC
Created attachment 189428 [details]
file for borders and pdf accessebility
Comment 5 SusanneMohn 2023-09-08 05:23:47 UTC
bug confirmed- see attachment. look at different styles of borders - 2 lines create 2 messages in PAC 2021
Comment 6 Commit Notification 2023-10-23 10:56:49 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e9ca8fb1af1e3d41160c13e8002f05a610a0bd0b

tdf#157145 sw: PDF/UA export: tag borders as Artifacts

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Michael Stahl 2023-10-23 11:15:21 UTC
fixed on master
Comment 8 Commit Notification 2023-10-24 21:56:53 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/7ac1eada88ff81830bb0d36cda4a902084b5f8d9

tdf#157145 sw: PDF/UA export: tag borders as Artifacts

It will be available in 7.6.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Gabor Kelemen (Collabora) 2023-11-02 07:56:23 UTC
*** Bug 157895 has been marked as a duplicate of this bug. ***
Comment 10 Gabor Kelemen (Collabora) 2023-11-02 07:57:12 UTC
Setting to verified, in:

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: d8326f1f54b2f4644b52fbfa7106eeeae6e5bb7b
CPU threads: 15; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: en-US (hu_HU); UI: en-US
Calc: threaded