tdf#157145 sw: PDF/UA export: tag borders as Artifacts

(probably regression from commit 804d0a896731629397c5328c13c04a45bc55f459
 moving the ProcessPrimitives to SwRootFrame::PaintSwFrame())

Change-Id: I4015ffe6566c94e9f3b3694d39e0c24797cb9039
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/158266
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>
(cherry picked from commit e9ca8fb1af1e3d41160c13e8002f05a610a0bd0b)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/158281
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>